[package]
name = "share-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
futures = "0.3.28"
reqwest = "0.11.20"
serde = {version = "*",features = ['derive']}
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
